crates/fig-lexer/tests/snapshots/integration_tests__unions__generic_single.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Union
- Ident: Option
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Ident: some
- Colon
- Ident: T
- Newline
- Ident: none
- Colon
- Ident: ok
- Newline
- Dedent
